--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "babel-loader": "^8.0.0-beta.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
@@ -16,6 +19,10 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
-    "styled-components": "^3.2.6"
+    "eslint-config-airbnb-standard": "^1.6.6",
+    "global": "^4.3.2",
+    "styled-components": "^3.2.6",
+    "webpack": "^4.11.1",
+    "webpack-dev-server": "^3.1.4"
   }
 }
