--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,7 +22,8 @@
     "eslint-config-airbnb-standard": "^1.6.6",
     "global": "^4.3.2",
     "styled-components": "^3.2.6",
-    "webpack": "^4.11.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
   }
 }
